--- a/index.html
+++ b/index.html
@@ -30,34 +30,34 @@
           points to ensure that your project is successful
         </p>
       </header>
-      <section class="cards">
+      <div class="cards">
         <section class="card card-1">
           <h2>Supervisor</h2>
           <p>Monitors activity to identify project roadblocks</p>
-          <img src="images/icon-supervisor.svg" />
+          <img src="images/icon-supervisor.svg" alt="" />
         </section>
         <section class="card card-2">
           <h2>Team Builder</h2>
           <p>
             Scans our talent network to create the optimal team for your project
           </p>
-          <img src="images/icon-team-builder.svg" />
+          <img src="images/icon-team-builder.svg" alt="" />
         </section>
         <section class="card card-3">
           <h2>Karma</h2>
           <p>
             Regularly evaluates our talent to ensure quality
           </p>
-          <img src="images/icon-karma.svg" />
+          <img src="images/icon-karma.svg" alt="" />
         </section>
         <section class="card card-4">
           <h2>Calculator</h2>
           <p>
             Uses data from past projects to provide better delivery estimates
           </p>
-          <img src="images/icon-calculator.svg" />
+          <img src="images/icon-calculator.svg" alt="" />
         </section>
-      </section>
+      </div>
     </div>
   </body>
 </html>
